# pf2cb

./: .eslintrc.js  README.md  package-lock.json  package.json
devtools/: docker-compose.yml
src/: main.js  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/connectors/: mod.rs  mongo.rs
src/assets/: styles.scss
src/components/: Landing.vue
src/components/ancestry/: AncestryCard.vue  AncestryForm.vue  AncestryView.vue  HeritagesCard.vue  HeritagesForm.vue
src/components/backgrounds/: BackgroundCard.vue  BackgroundForm.vue  BackgroundView.vue
src/components/classes/: ClassCard.vue  ClassView.vue  FeatCard.vue  LevelTable.vue
src/components/classes/form/: ClassForm.vue  FeatForm.vue  LevelForm.vue  SpellForm.vue
src/components/feats/: FeatCard.vue  FeatForm.vue  FeatView.vue
src/components/layout/: SideNav.vue
src/components/settings/: SaveFolder.vue
src/components/utility/: BoostInput.vue  SkillInput.vue
src/layouts/: Default.vue
src/router/: index.js  index.ts
src/services/: ancestries.ts  backgrounds.ts  classes.ts  connectors.ts  feats.ts  spellForm.ts  system.ts  tools.ts
src/shared/types/: AbilityScores.ts  Ancestry.ts  Backgrounds.ts  Class.ts  Feat.ts  Heritage.ts  Mastery.ts  Skills.ts  Tool.ts  class.ts  feat.ts
src/views/: Ancestry.vue  Background.vue  Character.vue  Class.vue  ClassBuilder.vue  Feats.vue  Home.vue  Setting.vue
