[package]
name = "pf-2-cb"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "pf-2-cb"
edition = "2018"
build = "src/build.rs"

[dependencies]
tauri = { version = "0.9", features = [ "all-api" ] }
chrono = { version = "0.4", features = [ "serde" ] }
tokio = { version = "0.2", features = [ "macros", "rt-threaded" ] }
futures = { version = "0.3.4", default-features = false, features = [ "async-await" ] }
serde = { version = "1.0", features = [ "derive" ] }
mongodb = "1.1.1"
warp = "0.2"
thiserror = "1.0"
serde_json = "1.0"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "pf-2-cb"
path = "src/main.rs"
